welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: not found: value setBrosseCouleur
	setBrosseCouleur(c)
        ^