welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur(c:Color) {
	setBrosseCouleur(c)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	droite()
	droite()
}


def growFlowers() {
	
}

fleur(Color.RED)